--- a/inc/login.html
+++ b/inc/login.html
@@ -166,10 +166,10 @@
             <input type="email" placeholder="Email" id="email">
         </div>
         <div class="col s12">
-            <input type="password" placeholder="Password" id="pass">
+            <input type="text" placeholder="Mobile" id="mobile">
         </div>
         <div class="col s12">
-            <input type="password" placeholder="Confirm password" id="confirm_pass">
+            <input type="password" placeholder="Password" id="pass">
         </div>
         <div class="col s12 center">
             <a class="btn blue lighten-1 waves-effect" id="signup">Sign up</a>
